--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -9,14 +9,14 @@
 {% block navbar_left_items %}
     <li>
         <div class="btn-group" id="type_grp" data-toggle="buttons" style="margin-right:5px;">
-            <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Public" id="public_btn">
+            <label class="btn btn-info btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Public" id="public_btn">
                 <input type="radio" name="options" autocomplete="off"><span class="glyphicon glyphicon-globe"></span> <span
                     class="badge">{{ n_public }}</span></label>
-            <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Flagged" id="flagged_btn">
+            <label class="btn btn-info btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Flagged" id="flagged_btn">
                 <input type="radio" name="options" autocomplete="off"><span class="glyphicon glyphicon-flag"></span> <span
                     class="badge">{{ n_flagged }}</span>
             </label>
-            <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Hidden" id="hidden_btn">
+            <label class="btn btn-info btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Hidden" id="hidden_btn">
                 <input type="radio" name="options" autocomplete="off"><span class="glyphicon glyphicon-remove-circle"></span> <span
                     class="badge">{{ n_hidden }}</span>
             </label>
@@ -26,14 +26,14 @@
                             <li>
 
                                 <div class="btn-group" id="status_grp" data-toggle="buttons">
-                                    <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Unchecked" id="pending_btn">
-                                        <input type="radio" name="status" autocomplete="off"><span class="glyphicon glyphicon-time"></span> <span class="badge">{{ n_pending }}</span></label>
-                                    <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Checked and confirmed" id="complete_btn">
-                                        <input type="radio" name="status" autocomplete="off"><span class="glyphicon glyphicon-thumbs-up"></span> <span
+                                    <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Unchecked" id="unchecked_btn">
+                                        <input type="radio" name="pending" autocomplete="off"><span class="glyphicon glyphicon-time"></span> <span class="badge">{{ n_pending }}</span></label>
+                                    <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Checked and confirmed" id="confirmed_btn">
+                                        <input type="radio" name="pending" autocomplete="off"><span class="glyphicon glyphicon-thumbs-up"></span> <span
                                             class="badge">{{ n_confirmed }}</span>
                                     </label>
-                                    <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Checked and revised" id="complete_btn">
-                                        <input type="radio" name="status" autocomplete="off"><span class="glyphicon glyphicon-thumbs-down"></span> <span
+                                    <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Checked and revised" id="revised_btn">
+                                        <input type="radio" name="pending" autocomplete="off"><span class="glyphicon glyphicon-thumbs-down"></span> <span
                                             class="badge">{{ n_revised }}</span>
                                     </label>
                                 </div>
@@ -45,10 +45,8 @@
 {% endblock %}
 
 {% block view_others_annotations %}
-    {% if form.instance.report.expert_report_annotations.count > 1 %}
-        <div style="display:none;" id='other_annotations_alert{{ form.instance.id }}'
+        <div style="overflow: auto; height: 900px;" id='other_annotations_alert{{ form.instance.id }}'
              class='alert alert-info' role='alert'>
-            <a class="close" onclick="$('.alert').hide()">×</a>
             {{ form.instance.get_others_annotation_html | safe }}
         </div>
 
@@ -56,7 +54,6 @@
                 onclick="$('#other_annotations_alert{{ form.instance.id }}').show();"
                 class="btn btn-default btn-sm">Show Others' Annotations
         </button>
-    {% endif %}
 {% endblock %}
 
 
@@ -115,30 +112,18 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="flagged_select" class="col-sm-4 control-label">Flagged By Me:</label>
+                            <div class="form-group">
+                                <label for="status_select" class="col-sm-4 control-label">Status:</label>
 
-                            <div class="col-sm-8">
-                                <select id="flagged_select" class="selectpicker show-tick form-control">
-                                    <option value="all">{% trans 'All' %}</option>
-                                    <option value="flagged">Flagged only</option>
-                                    <option value="unflagged">Unflagged only</option>
-                                </select>
+                                <div class="col-sm-8">
+                                    <select id="status_select" class="selectpicker show-tick form-control">
+                                        <option value="all">All</option>
+                                        <option value="public">Public</option>
+                                        <option value="flagged">Flagged</option>
+                                        <option value="hidden">Hidden</option>
+                                    </select>
+                                </div>
                             </div>
-                        </div>
-
-
-                        <div class="form-group">
-                            <label for="hidden_select" class="col-sm-4 control-label">Hidden By Me:</label>
-
-                            <div class="col-sm-8">
-                                <select id="hidden_select" class="selectpicker show-tick form-control">
-                                    <option value="all">{% trans 'All' %}</option>
-                                    <option value="hidden">Hidden only</option>
-                                    <option value="unhidden">Not hidden only</option>
-                                </select>
-                            </div>
-                        </div>
 
                     </form>
                 </div>
@@ -165,9 +150,7 @@
             var qp = "?orderby=" + $("#orderby_select").val();
             qp += "&tiger_certainty=" + $("#tiger_certainty_select").val();
             qp += "&site_certainty=" + $("#site_certainty_select").val();
-            qp += "&flagged=" + $("#flagged_select").val();
-            qp += "&hidden=" + $("#hidden_select").val();
-
+            qp += "&status=" + $("#status_select").val();
             return(qp);
         }
 
@@ -175,16 +158,15 @@
         $("#orderby_select").val("{{ orderby }}");
         $("#tiger_certainty_select").val("{{ tiger_certainty }}");
         $("#site_certainty_select").val("{{ site_certainty }}");
-        $("#flagged_select").val("{{ flagged }}");
-        $("#hidden_select").val("{{ hidden }}");
+        $("#status_select").val("{{ status }}");
 
-        if ("{{ public }}" == "public") {
+        if ("{{ final_status }}" == "public") {
             public_btn.addClass("active");
         }
-        else if ("{{ flagged_others }}" == "flagged") {
+        else if ("{{ final_status }}" == "flagged") {
             flagged_btn.addClass("active");
         }
-        else if ("{{ hidden_others }}" == "hidden") {
+        else if ("{{ final_status }}" == "hidden") {
             hidden_btn.addClass("active");
         }
 
@@ -203,9 +185,19 @@
             window.location.href = qp;
         }
 
-        public_btn.on('click', {extr: '&public=public'}, submit_queries_plus);
-        flagged_btn.on('click', { extr: '&flagged_others=flagged'}, submit_queries_plus);
-        hidden_btn.on('click', {extr: '&hidden_others=hidden'}, submit_queries_plus);
+        public_btn.on('click', {extr: '&final_status=public'}, submit_queries_plus);
+        flagged_btn.on('click', { extr: '&final_status=flagged'}, submit_queries_plus);
+        hidden_btn.on('click', {extr: '&final_status=hidden'}, submit_queries_plus);
+
+
+        var unchecked_btn = $("#unchecked_btn"), confirmed_btn = $("#confirmed_btn"), revised_btn = $("#revised_btn");
+
+        var pending = "{{ pending }}";
+        pending == "revised" ? revised_btn.addClass("active") : (pending == "confirmed"? confirmed_btn.addClass("active") : unchecked_btn.addClass("active"));
+        unchecked_btn.on('click', {extr: '&pending=unchecked'}, submit_queries_plus);
+        confirmed_btn.on('click', { extr: '&pending=confirmed'}, submit_queries_plus);
+        revised_btn.on('click', { extr: '&pending=revised'}, submit_queries_plus);
+
 
 
     </script>
