--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -20,14 +20,14 @@
     <li>
         <div class="btn-group" id="type_grp" data-toggle="buttons" style="margin-right:5px;">
             <label class="btn btn-info btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Public" id="public_btn">
-                <input type="radio" name="options" autocomplete="off"><span class="glyphicon glyphicon-globe"></span> <span
+                <input type="radio" name="options" autocomplete="off"><span class="glyphicon glyphicon-eye-open"></span> <span
                     class="badge">{{ n_public }}</span></label>
             <label class="btn btn-info btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Flagged" id="flagged_btn">
                 <input type="radio" name="options" autocomplete="off"><span class="glyphicon glyphicon-flag"></span> <span
                     class="badge">{{ n_flagged }}</span>
             </label>
             <label class="btn btn-info btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Hidden" id="hidden_btn">
-                <input type="radio" name="options" autocomplete="off"><span class="glyphicon glyphicon-remove-circle"></span> <span
+                <input type="radio" name="options" autocomplete="off"><span class="glyphicon glyphicon-eye-close"></span> <span
                     class="badge">{{ n_hidden }}</span>
             </label>
         </div>
